[package]
name = "cultura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }
scraper = "0.12.0"
structopt = "0.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4.24"
