[package]
name = "cultura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }
scraper = "0.12.0"
structopt = "0.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4.24"
daemonize = "0.5.0"
uuid = {version = "1.3.1", features = ["v4"]}
colored = "2.0.0"
home = "0.5.5"
log = "0.4.17"
